<?xml version="1.0" encoding="US-ASCII"?>
<!--
 ! Copyright (c) 2023 Red Hat, Inc.
 !
 ! Licensed under the Apache License, Version 2.0 (the "License");
 ! you may not use this file except in compliance with the License.
 ! You may obtain a copy of the License at
 !
 !     http://www.apache.org/licenses/LICENSE-2.0
 !
 ! Unless required by applicable law or agreed to in writing, software
 ! distributed under the License is distributed on an "AS IS" BASIS,
 ! WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ! See the License for the specific language governing permissions and
 ! limitations under the License.
 `-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.kojan</groupId>
    <artifactId>kojan-parent</artifactId>
    <version>3</version>
  </parent>
  <artifactId>runit</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>runit-api</module>
    <module>runit-validator</module>
  </modules>
  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>io.kojan</groupId>
	<artifactId>runit-api</artifactId>
	<version>${project.version}</version>
      </dependency>
      <dependency>
	<groupId>org.junit.jupiter</groupId>
	<artifactId>junit-jupiter-api</artifactId>
	<version>5.11.0</version>
      </dependency>
      <dependency>
	<groupId>org.junit.jupiter</groupId>
	<artifactId>junit-jupiter-engine</artifactId>
	<version>5.11.0</version>
	<scope>runtime</scope>
      </dependency>
      <dependency>
	<groupId>org.junit.platform</groupId>
	<artifactId>junit-platform-launcher</artifactId>
	<version>1.11.0</version>
      </dependency>
      <dependency>
	<groupId>org.hamcrest</groupId>
	<artifactId>hamcrest</artifactId>
	<version>3.0</version>
      </dependency>
      <dependency>
	<groupId>io.kojan</groupId>
	<artifactId>java-deptools-native</artifactId>
	<version>1.2.0</version>
      </dependency>
      <dependency>
	<groupId>io.github.fedora-java</groupId>
	<artifactId>javapackages-validator-spi</artifactId>
	<version>2.1.0</version>
      </dependency>
      <dependency>
	<groupId>io.kojan</groupId>
	<artifactId>jpv-core</artifactId>
	<version>ba5d4df</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <release>22</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <argLine>--enable-native-access ALL-UNNAMED</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
